# Henosync

./: .gitignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  release.yml  test.yml
apps/backend/: main.py  pyproject.toml  ruff.toml
apps/backend/henosync/api/: app.py  websocket_server.py
apps/backend/henosync/api/routes/: commands.py  execution.py  markers.py  missions.py  nodes.py  operations.py  safety.py  zones.py
apps/backend/henosync/core/: __init__.py  device_proxy.py  event_bus.py  failsafe_manager.py  fleet_context.py  marker_manager.py  mission_engine.py  node_registry.py  operation_manager.py  telemetry_bus.py  zone_manager.py
apps/backend/henosync/models/: __init__.py  mission.py  node.py  telemetry.py
apps/backend/henosync/plugin_system/: __init__.py  control_interfaces.py  interfaces.py  loader.py  registry.py
apps/backend/henosync/storage/: __init__.py  database.py  mission_store.py
apps/backend/henosync/transport/: __init__.py  base.py  registry.py  ros2.py  simulation.py
apps/backend/tests/: test_health.py
apps/desktop/: package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/main/: index.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.tsx  env.d.ts  index.html  (+1 more)
plugins/area-patrol/: manifest.json  plugin.py
plugins/jackal/: manifest.json  plugin.py
plugins/sim-dummy/: manifest.json  plugin.py
plugins/template/: manifest.json  plugin.py
scripts/: setup.bat  setup.sh
(+49 files in other folders)
